PortfolioStyle.css
body{
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
}




.portfolio {
/*    margin-left: 75px;*/
}

.portfolio h1{
    color: #4A4A4A;
}

.projectBox {
    position: relative;
    width: 350px;
    height: 350px;
    border: 1px solid #979797;
    border-radius: 10px;
    background-color:  white;
    transition-duration: 0.5s;
    
/*    float: left;*/
    margin: 10px;
}

/*Is it better practice to do .projectBody or the longer path? */
.projectBox .projectBody{
    text-align: center;
    font-size: 1em;
    margin-top: 40px;
    margin-left: 38px;
    margin-right: 38px;
    font-size: 1em;
    color: #9B9B9B;
}

.projectBox .projectHeader {
    text-align: center;
}

.projectBox .projectHeader h1{
    color: #F5A623;
    margin-bottom: 0px;
    font-weight: 300;
    margin-top: 30px;
    padding: 0px;
    font-size: 2em;
}
.projectBox .projectHeader p{
    margin: 0px;
    padding: 0px;
    font-size: 1em;
    color: #4A4A4A;
}

.projectBox .featured{
    font-size: 8px;
    color: #F5A623;
    text-align: center;
    position: absolute;
    right: 5px; top:5px;
}

.projectBox .featured .star{
    margin: 0px;
}
.projectBox .featured .star p{
    margin: 0;
    font-size: 8px;
}

.projectBox .projectFooter{
    text-align: center;
    position: absolute;
    left: 0; bottom: 0; right: 0;

}

.portfolioTitle {
    margin-left: 76px;
    
}

.portfolioTitle h1{
    margin: 0px;
    font-weight: 100;
    font-size: 65px;
}
.portfolioTitle .line{
    border-top: 1px solid #D8D8D8;
    width: 250px;
    margin-bottom: 65px;
}

div.projectBox:hover{
    background-color: #4A4A4A;
    color: white;
}
div.projectBox:hover .projectHeader p{
    color: #D8D8D8;
}
div.projectBox:hover .projectBody p{
    color: #ffffff;
}




.item-detail {
    background-color: aqua;
    width: 100%;
    height: 600px;
    display: block;
    margin: 0px;
}
.item-detail .header {
    position: relative;
    background-color: bisque;
    width: 100%;
    height: 210px;
    margin: 0px;
}

.item-detail .header .date{
    position: absolute;
    top: 10px;
    right: 30px;
}

.item-detail .title-button-wrapper{
    float: left;
}

.item-detail .header .title{
    position: relative;
}

.item-detail .header .icon{
    height: 160px;
    width: 160px;
    background-color: rebeccapurple;
    margin: 25px;
    display: flex;
    align-items: center;
    float: left;
    
}
.item-detail .header .icon img{
    display: block;
    height:120px;
    margin: auto;
}

.item-detail .get-dropdown .button{
/*    float: left;*/
    background-color: #4A90E2;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    color: white;
    font-weight: bolder;
    height: 47px;
    width: 100px;
    font-size: 23px;
    border: none;
    cursor: pointer;
}

.item-detail .get-dropdown .details{
    float: right;
    margin-left: 1px;
    background-color: #4A90E2;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    width: 35px;
    height: 47px;
    cursor: pointer;
}
.item-detail .get-dropdown .details img{
    margin-top: 21px;
    margin-left: 11px;
}

.item-detail .get-dropdown{
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.item-detail .get-dropdown .content {
    display: none;
    position: absolute;
    background-color: #4689D7;
    margin-top: 1px;
    
    width: 100%;
/*    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
}

/* Links inside the dropdown */
.item-detail .get-dropdown .content a {
    color: white;
    
    padding: 12px 16px;
    text-decoration:none;
    display: block;
}

/* Change color of dropdown links on hover */
.item-detail .get-dropdown .content a:hover {
/*    background-color: #f1f1f1;*/
    text-decoration: underline;
}

/* Show the dropdown menu on hover */
.item-detail .get-dropdown:hover .content {
    display: block;
}

/* Change the background color of the dropdown button when the dropdown content is shown */
.item-detail .get-dropdown:hover .button {
/*.93%    background-color: #4586D2;*/
    background-color: #4689D7; 
}
.item-detail .get-dropdown:hover .details {
/*.93% background-color: #4586D2;*/
    background-color: #4689D7; 
}



.item-detail .tech-used{
    background-color: violet;
    width: 100%;

}
.item-detail .tech-used .tag-container{
    float: left;
    width: 100%;
}
.item-detail .tech-used .tag-container p{
    width: 10%;
    float: left;
}

.item-detail .tech-used .tag-container .tag{
    padding: 20px;
    float: left;
    text-align: center;
    border-radius: 5px;
    max-height: 35px;
    background-color: #D8D8D8;
    margin-left: 10px;
    margin-right: 10px;
}

.item-detail .details{
    width: 100%;
    height: 520px;
    background-color: azure;
}
.item-detail .details .screenshots{
    width: 66%; 
    height: inherit;
    background-color: firebrick;
    float: left;
}
.item-detail .details .description{
    width: 33%;
    background-color: peru;
    float: left;
    height: 100%;
    
}

.item-detail .support{
    background-color: dodgerblue;
    text-align: center;
    position: absolute;
    bottom: 25px;
    right: 70px;
    
}
.item-detail .button-container{
    height: 49px;
    align-content: center;
}
.item-detail .button-container .support-button{
    width: 95px;
    float: left;
    height: 100%;
    border-radius: 5px;
    margin-left: 7.5px;
    margin-right: 7.5px;
}
.item-detail .button-container .support-button#twitter{
    background-color: #30A1ED;
}
.item-detail .button-container .support-button#facebook{
    background-color: #3F5699;
}
.item-detail .button-container .support-button#github{
    background-color: #3D6BBF;
}

